HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeRecordNonFfiField/Expected.uv
//! Expected diagnostic metadata for the FfiSafeRecordNonFfiField rejected-source specimen.

expectedDiagnostic("E-TYP-2626", "rule.23.FfiSafe-Record-Field-Err")
